...
    var showCamposVacios by rememberSaveable { mutableStateOf(false) }
    val showCredencialesIncorrectas by viewModel.showCredencialesIncorrectas
    val showCorreoNoRegistrado by viewModel.showCorreoNoRegistrado

    Scaffold(topBar = {
        TopAppBar(
            title = { Text("Accede a tu cuenta", color = Color.White, fontWeight = FontWeight.Bold, fontSize = 28.sp) },
            navigationIcon = {
                IconButton(
                    onClick = {
                        //navController.navigate(Screens.MyApp.route)
                        navController.navigate(Screens.HomeScreen.route)
                    },
...
