...

@Composable
fun UsuarioCreado(onDismiss: () -> Unit, navController: NavController) {
    val openAlert = remember { mutableStateOf(true) }

    AlertDialog(
        modifier = Modifier.testTag("alert_usuario_creado"),
        onDismissRequest = {
            openAlert.value = false
            onDismiss()
        },
        title = { Text(text = "Cuenta creada") },
        text = { Text(text = "Inicia sesión con tus credenciales. ") },
...
